--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
   <div id="app"></div>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
@@ -22,5 +23,6 @@
   <script src="compiled/src/components/Search.js"></script>
   <script src="compiled/src/components/App.js"></script>
   <script src="compiled/src/index.js"></script>
+  <script></script>
 </body>
 </html>
